--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
+  color: #EEEEEE;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +21,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
+    color: #EEEEEE;
     background: black;
   }
 }
